<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PromptActivity">

    <TextView
        android:id="@+id/prompt_text_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="100dp"
        android:textSize="20dp"
        android:textColor="#FF69B4"
        tools:text="Podpowiedź:"/>


    <TextView
        android:id="@+id/prompt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/czy_chcesz_zobaczyc"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/show_correct_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_show_correct_answer"/>
        <Button
            android:id="@+id/back_prompt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_prompt_back"/>



    </LinearLayout>

</LinearLayout>